refactor card partial indentation

--- a/app/views/dashboard/stats/_card.html.erb
+++ b/app/views/dashboard/stats/_card.html.erb
@@ -16,9 +16,7 @@
 						</div>
 
 						<small class="text-muted float-left m-t-5 mb-3">Change</small>
-						<small class="text-muted float-right m-t-5 mb-3 counter append-percent" data-count="72">
-							0
-						</small>
+						<small class="text-muted float-right m-t-5 mb-3 counter append-percent" data-count="72">0</small>
 					</div>
 				</div>
 
@@ -36,9 +34,7 @@
 						</div>
 
 						<small class="text-muted float-left m-t-5 mb-3">Change</small>
-						<small class="text-muted float-right m-t-5 mb-3 counter append-percent" data-count="67">
-							0
-						</small>
+						<small class="text-muted float-right m-t-5 mb-3 counter append-percent" data-count="67">0</small>
 					</div>
 				</div>
 
@@ -56,9 +52,7 @@
 						</div>
 
 						<small class="text-muted float-left m-t-5 mb-3">Change</small>
-						<small class="text-muted float-right m-t-5 mb-3 counter append-percent" data-count="83">
-							0
-						</small>
+						<small class="text-muted float-right m-t-5 mb-3 counter append-percent" data-count="83">0</small>
 					</div>
 				</div>
 
@@ -76,9 +70,7 @@
 						</div>
 
 						<small class="text-muted float-left m-t-5 mb-3">Change</small>
-						<small class="text-muted float-right m-t-5 mb-3 counter append-percent" data-count="77">
-							0
-						</small>
+						<small class="text-muted float-right m-t-5 mb-3 counter append-percent" data-count="77">0</small>
 					</div>
 				</div>
 			</div>
