--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,44 +3,41 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 #nav-text-custom span,
  #nav-icons {
-   color: #E2DFD2;
+  color: #E2DFD2;
  }
  #navbar-container,
  #aside-toolbar,
  #menu-arrow {
-   background-color: #399AF2;
+  background-color: #736CC7;
  }
  #logo_path {
-   fill: #E2DFD2;
+  fill: #E2DFD2;
  }
- #sidemenu-text span,
+ #sidemenu-text span, .page-heading
  .has-arrow::after {
-   color: #788DB4;
-   &:hover {
-     color: #736CC7;
-   }
+  color: #736CC7;
  }
  #brand-text {
-   position: absolute;
-   top: -3px;
-   left: 36px;
-   padding: 0;
-   color: #E2DFD2;
-   font-size: 18px;
+  position: absolute;
+  top: -3px;
+  left: 36px;
+  padding: 0;
+  color: #E2DFD2;
+  font-size: 22px;
  }
  #cart-icon-round {
-   background-color: rgba(246, 74, 145, 0.4);
+  background-color: rgba(246, 74, 145, 0.4);
  }
  #cart-icon {
-   color: #F64A91;
+  color: #F64A91;
  }
  #graph-bar-round {
-   background-color: rgba(115, 108, 199, 0.4);
+  background-color: rgba(115, 108, 199, 0.4);
  }
  #graph-bar-icon {
-   color: #736CC7;
+  color: #736CC7;
  }
  .row a,
  .mCSB_container a {
-   color: rgb(97, 113, 130);
+  color: rgb(97, 113, 130);
  } 
