Add categories button in sidebar of RestaurantPanel

--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -37,50 +37,20 @@
 
 				<li class="nav-dropdown">
 					<a class="has-arrow" href="#" aria-expanded="false">
-						<i class="icon dripicons-article"></i>
-						<span>Layouts</span>
+						<i class="icon dripicons-folder-open"></i>
+						<span>Categories</span>
 					</a>
 
 					<ul class="collapse nav-sub" aria-expanded="false">
 						<li>
-							<a href="layout.blank.html">
-								<span>Blank Page</span>
+							<a href="#">
+								<span>Add Category</span>
 							</a>
 						</li>
 
 						<li>
-							<a href="layout.1-column-wide.html">
-								<span>1 Column Wide</span>
-							</a>
-						</li>
-
-						<li>
-							<a href="layout.1-column-boxed.html">
-								<span>1 Column Boxed</span>
-							</a>
-						</li>
-
-						<li>
-							<a href="layout.tabbed-header.html">
-								<span>Tabbed Header</span>
-							</a>
-						</li>
-
-						<li>
-							<a href="layout.left-sidebar.html">
-								<span>Left Sidebar</span>
-							</a>
-						</li>
-
-						<li>
-							<a href="layout.right-sidebar.html">
-								<span>Right Sidebar</span>
-							</a>
-						</li>
-
-						<li>
-							<a href="layout.left-right-sidebars.html">
-								<span>Left &amp; Right Sidebars</span>
+							<a href="#">
+								<span>All Categories</span>
 							</a>
 						</li>
 					</ul>
