Add styling to the links of sidebar

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -17,6 +17,9 @@
  .has-arrow::after {
   color: #736CC7;
  }
+ li .linkto-text {
+  color: #736CC7;
+ }
  #brand-text {
   position: absolute;
   top: -3px;
