--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -49,9 +49,7 @@
 						</li>
 
 						<li>
-							<a href="#">
-								<span>All Categories</span>
-							</a>
+							<%= link_to  "All Categories", path, class: "linkto-text" %>
 						</li>
 					</ul>
 				</li>
