Add path to the AllCategories button in sidebar

--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -49,7 +49,7 @@
 						</li>
 
 						<li>
-							<%= link_to  "All Categories", path, class: "linkto-text" %>
+							<%= link_to  "All Categories", item_groups_path, class: "linkto-text" %>
 						</li>
 					</ul>
 				</li>
