--- a/app/assets/stylesheets/item_groups.scss
+++ b/app/assets/stylesheets/item_groups.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the ItemGroups controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.actionfield-width
+{
+  width: 30%;
+}
