--- a/app/views/item_groups/index.html.erb
+++ b/app/views/item_groups/index.html.erb
@@ -1,2 +1,27 @@
-<h1>ItemGroups#index</h1>
-<p>Find me in app/views/item_groups/index.html.erb</p>
+<div class="container mt-5">
+  <h1 class="mx-4">Categories</h1>
+  <div class="card-body">
+    <table class="table table-hover table-bordered">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col">Sr #</th>
+          <th scope="col">Category</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <th scope="row"></th>
+          <td></td>
+
+          <td class="actionfield-width">
+            <%= link_to "View", nil, class: "badge badge-primary text-white" %>
+            <%= link_to "Edit", nil, class: "badge badge-warning text-white" %>
+            <%= link_to "Delete", nil, class: "badge badge-danger text-white" %>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
