--- a/app/views/item_groups/index.html.erb
+++ b/app/views/item_groups/index.html.erb
@@ -11,9 +11,10 @@
       </thead>
 
       <tbody>
+      <% @category.each_with_index do |category, index| %>
         <tr>
-          <th scope="row"></th>
-          <td></td>
+          <td scope="row"><%= index + 1 %></td>
+          <td><%= category.name %></td>
 
           <td class="actionfield-width">
             <%= link_to "View", nil, class: "badge badge-primary text-white" %>
@@ -21,6 +22,7 @@
             <%= link_to "Delete", nil, class: "badge badge-danger text-white" %>
           </td>
         </tr>
+      <% end %>
       </tbody>
     </table>
   </div>
