Add path to AddCategory button in sidebar

--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -43,9 +43,7 @@
 
 					<ul class="collapse nav-sub" aria-expanded="false">
 						<li>
-							<a href="#">
-								<span>Add Category</span>
-							</a>
+							<%= link_to  "Add Category", new_item_group_path, class: "linkto-text" %>
 						</li>
 
 						<li>
