--- a/app/views/item_groups/_option_fields.html.erb
+++ b/app/views/item_groups/_option_fields.html.erb
@@ -4,7 +4,7 @@
     <div class="col-sm-10">
       <%= f.text_field :name, :placeholder => "Enter option name", :class => "form-control" %>
     </div>
-    <%# <%= f.hidden_field :restaurant_id, value: current_employee.restaurant_id %>
+    <%= f.hidden_field :restaurant_id, value: 1%>
     <div class="col-sm-2">
       <%= link_to_remove_association "Delete", f, class: "btn-sm btn-danger text-white" %>
     </div>
