--- a/app/views/item_groups/index.html.erb
+++ b/app/views/item_groups/index.html.erb
@@ -19,7 +19,7 @@
           <td class="actionfield-width">
             <%= link_to "View", nil, class: "badge badge-primary text-white" %>
             <%= link_to "Edit", nil, class: "badge badge-warning text-white" %>
-            <%= link_to "Delete", nil, class: "badge badge-danger text-white" %>
+            <%= link_to "Delete", item_group_path(category), method: :delete, data: {confirm: "Are you sure !! You want to delete this category?"}, class: "badge badge-danger text-white" %>
           </td>
         </tr>
       <% end %>
