--- a/app/views/item_groups/edit.html.erb
+++ b/app/views/item_groups/edit.html.erb
@@ -22,7 +22,7 @@
                 <div class="card-body">
                   <div class="form-group">
                     <%= f.label :name, "Category name" %>
-                    <%= f.text_field :name, :required => true, :placeholder => "Enter category name", :class => "form-control" %>
+                    <%= f.text_field :name, :placeholder => "Enter category name", :class => "form-control" %>
                   </div>
                 </div>
             </div>
