Render flashes partial in application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body class="compact-menu pace-done">
+    <div class="container mt-5">
+      <%= render "layouts/flashes" %>
+    </div>
     <%= yield %>
   </body>
 </html>
