Fix navbar position error occuring due to flashes

--- a/app/views/layouts/_flashes.html.erb
+++ b/app/views/layouts/_flashes.html.erb
@@ -1,11 +1,15 @@
-<% if notice %>
-  <div class="alert alert-success alert-dismissible fade show" role="alert">
-    <%= notice %>
-  </div>
-<% end %>
+<div id="message">
+  <div style="padding: 10px;">
+    <% if notice %>
+      <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <%= notice %>
+      </div>
+    <% end %>
 
-<% if alert %>
-  <div class="alert alert-danger alert-dismissible fade show" role="alert">
-    <%= alert %>
+    <% if alert %>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <%= alert %>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
