--- a/app/views/item_groups/index.html.erb
+++ b/app/views/item_groups/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-  <h1 class="mx-4">Categories</h1>
+  <h1 class="mt-4 mx-4">Categories</h1>
 
   <div class="card-body">
     <table class="table table-hover table-bordered">
