--- a/app/views/item_groups/new.html.erb
+++ b/app/views/item_groups/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-  <h1 class="mx-4">Add Category</h1>
+  <h1 class="mt-4 mx-4">Add Category</h1>
 
   <div class="card">
     <div class="card-body">
