--- a/app/views/item_groups/show.html.erb
+++ b/app/views/item_groups/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-  <h1 class="mx-3">View Category</h1>
+  <h1 class="mt-4 mx-3">View Category</h1>
 
   <div class="card mt-4 col-sm-9">
     <div class="card-header d-flex">
