--- a/app/views/item_groups/show.html.erb
+++ b/app/views/item_groups/show.html.erb
@@ -23,6 +23,14 @@
           </h5>
         </div>
 
+        <div class="d-flex flex-row">
+          <h5 class="font-weight-bold">Availability:</h5>
+
+          <h5 class="ml-2 text-capitalize">
+            <%= @item_group.availability %>
+          </h5>
+        </div>
+
         <div class="d-flex flex-row mt-3">
           <h5 class="font-weight-bold">Options:</h5>
 
