--- a/app/views/item_groups/new.html.erb
+++ b/app/views/item_groups/new.html.erb
@@ -13,41 +13,7 @@
         </li>
       </ul>
 
-      <%= form_with model: @item_group do |f| %>
-        <div class="tab-content" id="pills-tabContent-1">
-          <div class="tab-pane fade show active" id="pills-1" role="tabpanel" aria-labelledby="pills-1">
-            <div class="card">
-              <h5 class="card-header">New category</h5>
-
-                <div class="card-body">
-                  <div class="form-group">
-                    <%= f.label :name, "Category name" %>
-                    <%= f.text_field :name, :placeholder => "Enter category name", :class => "form-control" %>
-                  </div>
-                </div>
-            </div>
-          </div>
-
-          <div class="tab-pane fade" id="pills-2" role="tabpanel" aria-labelledby="pills-2">
-            <div class="card">
-              <h5 class="card-header">New options</h5>
-
-              <div class="card-body">
-                <div class="form-group" id="options">
-                  <%= f.fields_for :options do |nf| %>
-                    <%= render  "option_fields", f: nf %>
-                  <% end %>
-
-                  <div class="card-footer bg-light link">
-                    <%= link_to_add_association "New option", f, :options, class: "btn btn-success text-white" %>
-                    <%= f.button "Add category", type: "submit", :class=> "btn btn-dark" %>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
+      <%= render  "item_groups/form", item_group: @item_group %>
     </div>
   </div>
 </div>
