--- a/app/views/item_groups/index.html.erb
+++ b/app/views/item_groups/index.html.erb
@@ -1,6 +1,11 @@
 <div class="container mt-5">
-  <h1 class="mt-4 mx-4">Categories</h1>
-
+  <div class="d-flex">
+    <h1 class="mt-4 mx-4">Categories</h1>
+    <div class="ml-auto">
+      <%= link_to  "All", nil, class: "btn btn-success text-white" %>
+      <%= link_to  "Unavailable", nil, class: "btn btn-dark text-white" %>
+    </div>
+  </div>
   <div class="card-body">
     <table class="table table-hover table-bordered">
       <thead class="thead-light">
