--- a/app/views/item_groups/_form.html.erb
+++ b/app/views/item_groups/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="tab-content" id="pills-tabContent-1">
     <div class="tab-pane fade show active" id="pills-1" role="tabpanel" aria-labelledby="pills-1">
       <div class="card">
-        <h5 class="card-header">Edit category</h5>
+        <h5 class="card-header text-capitalize"><%= controller.action_name + " Category" %></h5>
 
           <div class="card-body">
             <div class="form-group">
@@ -24,7 +24,7 @@
 
     <div class="tab-pane fade" id="pills-2" role="tabpanel" aria-labelledby="pills-2">
       <div class="card">
-        <h5 class="card-header">Edit options</h5>
+        <h5 class="card-header text-capitalize"><%= controller.action_name + " Options" %></h5>
 
         <div class="card-body">
           <div class="form-group" id="options">
