Add flash-pos class in flashes partial to adjust flash position

--- a/app/views/layouts/_flashes.html.erb
+++ b/app/views/layouts/_flashes.html.erb
@@ -1,5 +1,5 @@
 <div id="message">
-  <div style="padding: 10px;">
+  <div class="flash-pos">
     <% if notice %>
       <div class="alert alert-success alert-dismissible fade show" role="alert">
         <%= notice %>
