--- a/app/assets/stylesheets/item_groups.scss
+++ b/app/assets/stylesheets/item_groups.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the ItemGroups controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
 .actionfield-width
 {
   width: 30%;
@@ -10,4 +7,10 @@
   top: 0;
   left: 0;
   width: 100%;
+}
+.flash-pos
+{
+  padding: 74px;
+  margin-left: 13.75rem;
+  width: 85%;
 }
