--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -28,15 +28,15 @@
 
 		<nav class="main-menu">
 			<ul class="nav metismenu" id="sidemenu-text">
-				<li class="nav-dropdown active">
+				<%# <li class="nav-dropdown active">
 					<a href="javascript:void(0)" aria-expanded="false">
 						<i class="icon dripicons-meter" id="sidebar-text"></i>
 						<span>Dashboard</span>
 					</a>
-				</li>
+				</li> %>
 
 				<li class="nav-dropdown">
-					<a class="has-arrow" href="#" aria-expanded="false">
+					<a class="has-arrow" href="#" aria-expanded="true">
 						<i class="icon dripicons-folder-open"></i>
 						<span>Categories</span>
 					</a>
@@ -52,7 +52,7 @@
 					</ul>
 				</li>
 
-				<li class="nav-dropdown">
+				<%# <li class="nav-dropdown">
 					<a class="has-arrow" href="#" aria-expanded="false">
 						<i class="icon dripicons-browser"></i>
 						<span>Pages</span>
@@ -128,9 +128,9 @@
 							</a>
 						</li>
 					</ul>
-				</li>
+				</li> %>
 
-				<li class="nav-dropdown">
+				<%# <li class="nav-dropdown">
 					<a class="has-arrow" href="#" aria-expanded="false">
 						<i class="icon dripicons-jewel"></i>
 						<span>UI Kit</span>
@@ -191,9 +191,9 @@
 							</a>
 						</li>
 					</ul>
-				</li>
+				</li> %>
 
-				<li class="nav-dropdown">
+				<%# <li class="nav-dropdown">
 					<a class="has-arrow" href="#" aria-expanded="false">
 						<i class="icon dripicons-stack"></i>
 						<span>Components</span>
@@ -248,9 +248,9 @@
 							</a>
 						</li>
 					</ul>
-				</li>
+				</li> %>
 
-				<li class="nav-dropdown">
+				<%# <li class="nav-dropdown">
 					<a class="has-arrow" href="#" aria-expanded="false">
 						<i class="icon dripicons-graph-bar"></i>
 						<span>Charts</span>
@@ -281,9 +281,9 @@
 							</a>
 						</li>
 					</ul>
-				</li>
+				</li> %>
 
-				<li class="nav-dropdown">
+				<%# <li class="nav-dropdown">
 					<a class="has-arrow" href="#" aria-expanded="false">
 						<i class="icon dripicons-to-do"></i>
 						<span>Forms</span>
@@ -396,9 +396,9 @@
 									</a>
 								</li>
 							</ul>
-						</li>
+						</li> %>
 
-						<li class="nav-dropdown">
+						<%# <li class="nav-dropdown">
 							<a class="has-arrow" href="#">Form Wizards</a>
 
 							<ul class="collapse nav-sub">
@@ -414,11 +414,11 @@
 									</a>
 								</li>
 							</ul>
-						</li>
-					</ul>
-				</li>
+						</li> %>
+					<%# </ul>
+				</li> %>
 
-				<li class="nav-dropdown">
+				<%# <li class="nav-dropdown">
 					<a class="has-arrow" href="#" aria-expanded="false">
 						<i class="icon dripicons-blog"></i>
 						<span>Tables</span>
@@ -437,9 +437,9 @@
 							</a>
 						</li>
 					</ul>
-				</li>
+				</li> %>
 
-				<li>
+				<%# <li>
 					<a href="apps.mail.html">
 						<i class="icon dripicons-mail"></i>
 						<span>Mail</span>
@@ -533,14 +533,14 @@
 							</ul>
 						</li>
 					</ul>
-				</li>
+				</li> %>
 
-				<li>
+				<%# <li>
 					<a href="helper-classes.html">
 						<i class="icon dripicons-help"></i>
 						<span>Helper Classes</span>
 					</a>
-				</li>
+				</li> %>
 			</ul>
 		</nav>
 	</div>
