--- a/app/views/item_groups/index.html.erb
+++ b/app/views/item_groups/index.html.erb
@@ -7,37 +7,6 @@
     </div>
   </div>
   <div class="card-body">
-    <table class="table table-hover table-bordered">
-      <thead class="thead-light">
-        <tr>
-          <th scope="col">Sr #</th>
-          <th scope="col">Category</th>
-          <th scope="col">Availability</th>
-          <th scope="col">Actions</th>
-        </tr>
-      </thead>
-
-      <tbody>
-      <% @category.each_with_index do |category, index| %>
-        <tr>
-          <td scope="row"><%= index + 1 %></td>
-          <td><%= category.name %></td>
-          <td class="text-capitalize">
-            <% if category.availability %> 
-              available
-            <% else %>
-              unavailable
-            <% end %>
-          </td>
-
-          <td class="actionfield-width">
-            <%= link_to "Show", item_group_path(category), class: "badge badge-primary text-white" %>
-            <%= link_to "Edit", edit_item_group_path(category), class: "badge badge-warning text-white" %>
-            <%= link_to "Delete", item_group_path(category), method: :delete, data: {confirm: "Are you sure !! You want to delete this category?"}, class: "badge badge-danger text-white" %>
-          </td>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
+    <%= render "item_groups/categories_table", item_category: @category %>
   </div>
 </div>
