Fix typo in submit button of form partial in ItemGroups views

--- a/app/views/item_groups/_form.html.erb
+++ b/app/views/item_groups/_form.html.erb
@@ -34,7 +34,7 @@
 
             <div class="card-footer bg-light link">
               <%= link_to_add_association "New option", f, :options, class: "btn btn-success text-white" %>
-              <%= f.button "Update category", type: "submit", :class=> "btn btn-dark" %>
+              <%= f.button "Submit", type: "submit", :class=> "btn btn-dark" %>
             </div>
           </div>
         </div>
