--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -28,12 +28,12 @@
 
 		<nav class="main-menu">
 			<ul class="nav metismenu" id="sidemenu-text">
-				<%# <li class="nav-dropdown active">
+				<li class="nav-dropdown active">
 					<a href="javascript:void(0)" aria-expanded="false">
 						<i class="icon dripicons-meter" id="sidebar-text"></i>
 						<span>Dashboard</span>
 					</a>
-				</li> %>
+				</li>
 
 				<li class="nav-dropdown">
 					<a class="has-arrow" href="#" aria-expanded="true">
@@ -43,15 +43,31 @@
 
 					<ul class="collapse nav-sub" aria-expanded="false">
 						<li>
-							<%= link_to  "Add Category", new_item_group_path, class: "linkto-text" %>
+							<%= link_to "Add Category", new_item_group_path, class: "linkto-text" %>
 						</li>
 
 						<li>
-							<%= link_to  "All Categories", item_groups_path, class: "linkto-text" %>
+							<%= link_to "All Categories", item_groups_path, class: "linkto-text" %>
 						</li>
 					</ul>
 				</li>
 
+				<li class="nav-dropdown">
+					<a class="has-arrow" href="#" aria-expanded="true">
+						<i class="icon dripicons-tags"></i>
+						<span>Discounts</span>
+					</a>
+
+					<ul class="collapse nav-sub" aria-expanded="false">
+						<li>
+							<%= link_to "Add Discount", nil, class: "linkto-text" %>
+						</li>
+
+						<li>
+							<%= link_to "All Discounts", nil, class: "linkto-text" %>
+						</li>
+					</ul>
+				</li>
 				<%# <li class="nav-dropdown">
 					<a class="has-arrow" href="#" aria-expanded="false">
 						<i class="icon dripicons-browser"></i>
