Rename AllCategories navlink to AvailableCategories in sidebar partial

--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -47,7 +47,7 @@
 						</li>
 
 						<li>
-							<%= link_to "All Categories", item_groups_path, class: "linkto-text" %>
+							<%= link_to "Available Categories", item_groups_path, class: "linkto-text" %>
 						</li>
 					</ul>
 				</li>
