--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -64,7 +64,7 @@
 						</li>
 
 						<li>
-							<%= link_to "All Discounts", nil, class: "linkto-text" %>
+							<%= link_to "Available Discounts", nil, class: "linkto-text" %>
 						</li>
 					</ul>
 				</li>
