--- a/app/views/discounts/index.html.erb
+++ b/app/views/discounts/index.html.erb
@@ -37,7 +37,7 @@
             </td>
 
             <td class="actionfield-width">
-              <%= link_to "Show", nil, class: "badge badge-primary text-white" %>
+              <%= link_to "Show", discount_path(discount), class: "badge badge-primary text-white" %>
               <%= link_to "Edit", nil, class: "badge badge-warning text-white" %>
               <%= link_to "Delete", nil, method: :delete, data: {confirm: "Are you sure !! You want to delete this discount?"}, class: "badge badge-danger text-white" %>
             </td>
