Add navlink path to AddDiscount in sidebar partial of Dashboard

--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -60,7 +60,7 @@
 
 					<ul class="collapse nav-sub" aria-expanded="false">
 						<li>
-							<%= link_to "Add Discount", nil, class: "linkto-text" %>
+							<%= link_to "Add Discount", new_discount_path, class: "linkto-text" %>
 						</li>
 
 						<li>
