--- a/app/views/discounts/show.html.erb
+++ b/app/views/discounts/show.html.erb
@@ -8,7 +8,7 @@
       </h3>
 
       <div class="ml-auto">
-        <%= link_to "Edit", nil, class: "badge badge-warning text-white" %>
+        <%= link_to "Edit", edit_discount_path(@discount), class: "badge badge-warning text-white" %>
         <%= link_to "Delete", discount_path(@discount), method: :delete, data: {confirm: "Are you sure !! You want to delete this discount?"}, class: "badge badge-danger text-white" %>
       </div>
     </div>
