--- a/app/views/discounts/index.html.erb
+++ b/app/views/discounts/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container mt-5">
   <div class="d-flex">
-    <h1 class="mt-5 mx-4">Available Discounts</h1>
+    <h1 class="mt-5 mx-4">Discounts</h1>
+
     <div class="ml-auto mt-3 mr-4">
       <%= link_to "All", nil, class: "btn btn-success text-white" %>
       <%= link_to "Expired", nil, class: "btn btn-dark text-white" %>
@@ -47,3 +48,13 @@
     </table>
   </div>
 </div>
+
+<% content_for :search_icon do %>
+  <a href="javascript:void(0)" class="open-search-button" data-q-action="open-site-search">
+		<i class="icon dripicons-search" id="nav-icons"></i>
+	</a>
+<% end %>
+
+<% content_for :search_bar_partial do %>
+  <%= render "shared/search_bar" %>
+<% end %>
