Render search_bar partial from shared in index view of ItemGroups

--- a/app/views/item_groups/index.html.erb
+++ b/app/views/item_groups/index.html.erb
@@ -26,5 +26,5 @@
 <% end %>
 
 <% content_for :search_bar_partial do %>
-  <%= render  "item_groups/search_bar" %>
+  <%= render  "shared/search_bar" %>
 <% end %>
