Install and enable coffee in app, resolve js files import error in application.js

--- a/app/views/item_groups/index.html.erb
+++ b/app/views/item_groups/index.html.erb
@@ -28,3 +28,7 @@
 <% content_for :search_bar_partial do %>
   <%= render  "shared/search_bar" %>
 <% end %>
+
+<% content_for :js_init do %>
+  Category.initialize()
+<% end %>
