--- a/app/views/discounts/index.html.erb
+++ b/app/views/discounts/index.html.erb
@@ -64,3 +64,7 @@
 <% content_for :search_bar_partial do %>
   <%= render "shared/search_bar" %>
 <% end %>
+
+<%= content_for :js_init do %>
+  Discounts.initialize()
+<% end %>
