--- a/app/views/discounts/index.html.erb
+++ b/app/views/discounts/index.html.erb
@@ -62,7 +62,7 @@
 <% end %>
 
 <% content_for :search_bar_partial do %>
-  <%= render "shared/search_bar" %>
+  <%= render "discounts/search_bar" %>
 <% end %>
 
 <%= content_for :js_init do %>
