Render search_bar partial of ItemGroups in index view of ItemGroups

--- a/app/views/item_groups/index.html.erb
+++ b/app/views/item_groups/index.html.erb
@@ -26,7 +26,7 @@
 <% end %>
 
 <% content_for :search_bar_partial do %>
-  <%= render  "shared/search_bar" %>
+  <%= render "item_groups/search_bar" %>
 <% end %>
 
 <% content_for :js_init do %>
