--- a/app/views/item_groups/_search_bar.html.erb
+++ b/app/views/item_groups/_search_bar.html.erb
@@ -1,8 +1,4 @@
-<%= search_form_for @q, class: "navbar-form" do |f| %>
-  <div class="form-group">
-    <%= f.search_field :name_cont, placeholder: "Search category and press [enter] ...", class: "form-control navbar-search", autocomplete: "off" %>
-    <i data-q-action="close-site-search" class="icon dripicons-cross close-search"></i>
-  </div>
-
+<%= search_form_for @q, class: "form-inline" do |f| %>
+  <%= f.search_field :name_cont, placeholder: "Search", class: "form-control navbar-search", autocomplete: "off" %>
   <%= f.submit class: "d-none" %>
 <% end %>
