Add signout path to signout option in navbar partial of Dashboard

--- a/app/views/dashboard/_navbar.html.erb
+++ b/app/views/dashboard/_navbar.html.erb
@@ -29,9 +29,9 @@
 				</a>
 				<div class="dropdown-divider"></div>
 
-				<a class="dropdown-item" href="auth.sign-in.html">
+				<%= link_to destroy_employee_session_path, class: "dropdown-item", method: :delete do %>
 					<i class="icon dripicons-lock-open"></i> Sign Out
-				</a>
+				<% end %>
 			</div>
 		</li>
 	</ul>
