--- a/app/views/discounts/_form.html.erb
+++ b/app/views/discounts/_form.html.erb
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  <%= f.hidden_field :restaurant_id, value: 1 %>
+  <%= f.hidden_field :restaurant_id, value: current_employee.restaurant_id %>
 
   <div class="card-footer bg-light link">
     <%= f.button "Submit", type: "submit", :class=> "btn btn-dark" %>
