Add hiddenfield value of restaurant_id in option_fields partial of ItemGroups

--- a/app/views/item_groups/_option_fields.html.erb
+++ b/app/views/item_groups/_option_fields.html.erb
@@ -17,6 +17,6 @@
         <%= link_to_remove_association "Delete", f, class: "btn-sm btn-danger text-white" %>
       </div>
     </div>
-    <%= f.hidden_field :restaurant_id, value: 1%>
+    <%= f.hidden_field :restaurant_id, value: current_employee.restaurant_id %>
   </div>
 </div>
