Add employee fullname,email in profile dropdown of navbar partial

--- a/app/views/dashboard/_navbar.html.erb
+++ b/app/views/dashboard/_navbar.html.erb
@@ -15,8 +15,8 @@
 							<img class="align-self-center mr-3 w-40 rounded-circle" src="../assets/img/avatars/1.jpg" alt="Albert Einstein">
 
 							<div class="media-body">
-								<h5 class="mt-0 mb-0">Albert Einstein</h5>
-								<span>support@authenticgoods.co</span>
+								<h5 class="mt-0 mb-0"><%= current_employee.employee_fullname %></h5>
+								<span><%= current_employee.email %></span>
 							</div>
 						</div>
 					</div>
