--- a/app/views/discounts/new.html.erb
+++ b/app/views/discounts/new.html.erb
@@ -3,6 +3,16 @@
 
   <div class="card">
     <div class="card-body">
+      <ul class="nav nav-pills nav-pills-primary mb-3" id="pills-demo-1" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link" id="pills-1-tab" data-toggle="pill" href="#pills-1" role="tab" aria-controls="pills-1" aria-selected="true">Details</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" id="pills-2-tab" data-toggle="pill" href="#pills-2" role="tab" aria-controls="pills-2" aria-selected="false">Timelines</a>
+        </li>
+      </ul>
+
       <%= render "discounts/form", discount: @discount %>
     </div>
   </div>
