--- a/app/views/discounts/_form.html.erb
+++ b/app/views/discounts/_form.html.erb
@@ -20,7 +20,7 @@
 
           <div class="form-group">
             <%= f.label :value, "Discount" %>
-            <%= f.number_field :value, in: 1..100, :class => "form-control" %>
+            <%= f.number_field :value, class: "form-control" %>
           </div>
 
           <div class="form-group row">
