Add link for DiscardedDiscounts in sidebar partial of Dashboard views

--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -67,6 +67,10 @@
 							<li>
 								<%= link_to "Available Discounts", discounts_path, class: "linkto-text" %>
 							</li>
+
+							<li>
+								<%= link_to "Discarded Discounts", discarded_discounts_path, class: "linkto-text" %>
+							</li>
 						</ul>
 					</li>
 				</ul>
