--- a/app/views/discounts/discarded.html.erb
+++ b/app/views/discounts/discarded.html.erb
@@ -4,41 +4,45 @@
   </div>
 
   <div class="card-body">
-    <table class="table table-hover table-bordered">
-      <thead class="thead-light">
-        <tr>
-          <th scope="col">Sr #</th>
-          <th scope="col">Name</th>
-          <th scope="col">Type</th>
-          <th scope="col">Discount</th>
-          <th scope="col">Status</th>
-          <th scope="col">Actions</th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @discarded_discounts.each_with_index do |dd, index| %>
+    <% if @discarded_discounts.empty? %>
+      <h3 class="border ml-1">No discarded discounts</h3>
+    <% else %>
+      <table class="table table-hover table-bordered">
+        <thead class="thead-light">
           <tr>
-            <td scope="row"><%= index + 1 %></td>
-            <td class="text-capitalize"><%= dd.name %></td>
-            <td class="text-capitalize"><%= dd.kind %></td>
-            <td class="text-capitalize"><%= dd.value %></td>
-
-            <td class="text-capitalize">
-              <% if dd.status %>
-                active
-              <% else %>
-                expired
-              <% end %>
-            </td>
-
-            <td class="actionfield-width">
-              <%= link_to "Restore", nil, class: "badge badge-success text-white" %>
-              <%= link_to "Delete", discount_path(dd), method: :delete, data: {confirm: "Are you sure !! You want to permanently delete this discount?"}, class: "badge badge-danger text-white" %>
-            </td>
+            <th scope="col">Sr #</th>
+            <th scope="col">Name</th>
+            <th scope="col">Type</th>
+            <th scope="col">Discount</th>
+            <th scope="col">Status</th>
+            <th scope="col">Actions</th>
           </tr>
-        <% end %>
-      </tbody>
-    </table>
+        </thead>
+
+        <tbody>
+          <% @discarded_discounts.each_with_index do |dd, index| %>
+            <tr>
+              <td scope="row"><%= index + 1 %></td>
+              <td class="text-capitalize"><%= dd.name %></td>
+              <td class="text-capitalize"><%= dd.kind %></td>
+              <td class="text-capitalize"><%= dd.value %></td>
+
+              <td class="text-capitalize">
+                <% if dd.status %>
+                  active
+                <% else %>
+                  expired
+                <% end %>
+              </td>
+
+              <td class="actionfield-width">
+                <%= link_to "Restore", restore_discount_path(dd), method: :get, class: "badge badge-success text-white" %>
+                <%= link_to "Delete", discount_path(dd), method: :delete, data: {confirm: "Are you sure !! You want to permanently delete this discount?"}, class: "badge badge-danger text-white" %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    <% end %>
   </div>
 </div>
