Change heading of index view in ItemGroups views

--- a/app/views/item_groups/index.html.erb
+++ b/app/views/item_groups/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="d-flex">
-    <h1 class="mt-5 mx-4">Categories</h1>
+    <h1 class="mt-5 mx-4">Available Categories</h1>
 
     <div class="ml-auto mt-3 mr-4">
       <%= search_form_for @q do |f| %>
