Add link for DiscardedCategories in sidebar partial of Dashboard views

--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -50,6 +50,10 @@
 							<li>
 								<%= link_to "Available Categories", item_groups_path, class: "linkto-text" %>
 							</li>
+
+							<li>
+								<%= link_to "Discarded Categories", discarded_item_groups_path, class: "linkto-text" %>
+							</li>
 						</ul>
 					</li>
 
