--- a/app/views/item_groups/discarded.html.erb
+++ b/app/views/item_groups/discarded.html.erb
@@ -32,7 +32,7 @@
               </td>
 
               <td class="actionfield-width">
-                <%= link_to "Show", nil, class: "badge badge-primary text-white" %>
+                <%= link_to "Show", item_group_path(dc), class: "badge badge-primary text-white" %>
                 <%= link_to "Restore", nil, method: :get, class: "badge badge-success text-white" %>
                 <%= link_to "Delete", item_group_path(dc), method: :delete, data: {confirm: "Are you sure !! You want to permanently delete this category?"}, class: "badge badge-danger text-white" %>
               </td>
