--- a/app/views/item_groups/show.html.erb
+++ b/app/views/item_groups/show.html.erb
@@ -8,8 +8,13 @@
       </h3>
 
       <div class="ml-auto">
-        <%= link_to "Edit", edit_item_group_path(@item_group), class: "badge badge-warning text-white" %>
-        <%= link_to "Delete", item_group_path(@item_group), method: :delete, data: {confirm: "Are you sure !! You want to delete this category?"}, class: "badge badge-danger text-white" %>
+        <% if @item_group.discarded? %>
+          <%= link_to "Restore", restore_item_group_path(@item_group), method: :get, class: "badge badge-success text-white" %>
+          <%= link_to "Delete", item_group_path(@item_group), method: :delete, data: {confirm: "Are you sure !! You want to permanently delete this category?"}, class: "badge badge-danger text-white" %>
+        <% else %>
+          <%= link_to "Edit", edit_item_group_path(@item_group), class: "badge badge-warning text-white" %>
+          <%= link_to "Delete", item_group_path(@item_group), method: :delete, data: {confirm: "Are you sure !! You want to delete this category?"}, class: "badge badge-danger text-white" %>
+        <% end %>
       </div>
     </div>
 
