Add root path to dashboard link in sidebar partial of Dashboard views

--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -30,7 +30,7 @@
 			<% if current_employee %>
 				<ul class="nav metismenu" id="sidemenu-text">
 					<li class="nav-dropdown active">
-						<a href="javascript:void(0)" aria-expanded="false">
+						<a href="/" aria-expanded="false">
 							<i class="icon dripicons-meter" id="sidebar-text"></i>
 							<span>Dashboard</span>
 						</a>
